--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="row">
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="../images/UI-UX.png" class="card-img-top" alt="...">
+              <img src="/UI-UX.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">UI UX</h5>
                 <p class="card-text">In digital design, user interface (UI) refers to the interactivity, look, and feel of a product screen or web page, while user experience (UX) covers a user's overall experience with the product or website.</p>
@@ -46,7 +46,7 @@
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="../images/website-development-and-design-1.jpg" class="card-img-top" alt="...">
+              <img src="/website-development-and-design-1.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">WEB DEVELOPMENT</h5>
                 <p class="card-text">Web development refers to the creating, building, and maintaining of websites. It includes aspects such as web design, web publishing, web programming, and database management. It is the creation of an application that works over the internet i.e. websites.
@@ -56,7 +56,7 @@
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="../images/Machine_Learning_shutterstock_1110900704_special-1024x512.jpg" class="card-img-top" alt="...">
+              <img src="/Machine_Learning_shutterstock_1110900704_special-1024x512.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Machine learning</h5>
                 <p class="card-text">Machine learning is a subfield of artificial intelligence, which is broadly defined as the capability of a machine to imitate intelligent human behavior. Artificial intelligence systems are used to perform complex tasks in a way that is similar to how humans solve problems</p>
